paleta de colores

--- a/app/src/main/res/drawable/background_logo.xml
+++ b/app/src/main/res/drawable/background_logo.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#65cccc" />
+            <solid android:color="@color/blue_light_200" />
         </shape>
     </item>
 
@@ -14,7 +14,7 @@
                 android:centerY="15%"
                 android:endColor="#00F57F17"
                 android:gradientRadius="350dp"
-                android:startColor="#1B4CFF"
+                android:startColor="@color/blue_ribbon_500"
                 android:type="radial" />
         </shape>
     </item>
@@ -26,7 +26,7 @@
                 android:centerY="100%"
                 android:endColor="#00F57F17"
                 android:gradientRadius="400dp"
-                android:startColor="#4501FF"
+                android:startColor="@color/purple_blue_700"
                 android:type="radial" />
         </shape>
     </item>
