--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,20 +3,20 @@
     <color name="primaryColor">#4a75e6</color>
     <color name="blue_light_200">#65cccc</color>
     <color name="blue_ribbon_500">#1B4CFF</color>
-    <color name="purple_blue_700">#4501FF</color>
-    <color name="red_bittersweet">#ff6b6b</color>
-    <color name="orange">#E87E21</color>
+    <color name="blue_purple_700">#4501FF</color>
+    <color name="blue_cello_900">#18264A</color>
+    <color name="red_bittersweet_200">#ff6b6b</color>
+    <color name="red_error_500">#BF3320</color>
     <color name="orange_light_200">#ffa64d</color>
+    <color name="orange">#E97A19</color>
     <color name="yellow_kournikova">#ffe66d</color>
-    <color name="green_mantis">#76b852</color>
+    <color name="green_mantis_200">#76b852</color>
+    <color name="green_jade_500">#4fb071</color>
+    <color name="green_hooker_700">#496f5d</color>
     <color name="gray_scorpion">#5e5e5e</color>
-
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="gray_dark">#393939</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_magnolia">#efe9f4</color>
+    <color name="black">#FF000000</color>
 
 </resources>
