--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/logInFragment"
         android:name="com.miguelrodriguez19.mindmaster.welcome.LogInFragment"
-        android:label="fragment_log_in"
-        tools:layout="@layout/fragment_log_in" >
+        android:label="@string/welcome"
+        tools:layout="@layout/fragment_log_in">
         <action
             android:id="@+id/action_logInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment"
@@ -17,30 +17,39 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_logInFragment_to_calendarFragment"
+            app:destination="@id/calendarFragment"
+            app:enterAnim="@anim/slide_in_bottom"
+            app:exitAnim="@anim/slide_out_top"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_bottom"
+            app:popUpTo="@id/logInFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.miguelrodriguez19.mindmaster.welcome.SignUpFragment"
-        android:label="fragment_sign_up"
+        android:label="@string/sign_up"
         tools:layout="@layout/fragment_sign_up" />
     <fragment
         android:id="@+id/calendarFragment"
         android:name="com.miguelrodriguez19.mindmaster.calendar.CalendarFragment"
-        android:label="fragment_calendar"
+        android:label="@string/calendar"
         tools:layout="@layout/fragment_calendar" />
     <fragment
         android:id="@+id/diaryFragment"
         android:name="com.miguelrodriguez19.mindmaster.diary.DiaryFragment"
-        android:label="fragment_diary"
+        android:label="@string/diary"
         tools:layout="@layout/fragment_diary" />
     <fragment
         android:id="@+id/passwordsFragment"
         android:name="com.miguelrodriguez19.mindmaster.passwords.PasswordsFragment"
-        android:label="fragment_passwords"
+        android:label="@string/passwords"
         tools:layout="@layout/fragment_passwords" />
     <fragment
         android:id="@+id/expensesFragment"
         android:name="com.miguelrodriguez19.mindmaster.expenses.ExpensesFragment"
-        android:label="fragment_expenses"
+        android:label="@string/expenses"
         tools:layout="@layout/fragment_expenses" />
 </navigation>
