--- a/app/src/main/res/layout/cell_calendar_events.xml
+++ b/app/src/main/res/layout/cell_calendar_events.xml
@@ -2,49 +2,49 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:orientation="horizontal"
+    android:id="@+id/cl_eventArea"
     android:layout_marginTop="3dp">
 
     <View
         android:id="@+id/view"
-        android:layout_width="4dp"
-        android:layout_height="match_parent"
+        android:layout_width="2dp"
+        android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:background="@color/gray_dove_500"
-        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
-        app:layout_constraintStart_toStartOf="@+id/circleImageView" />
+        app:layout_constraintEnd_toEndOf="@+id/civ_colorTag"
+        app:layout_constraintStart_toStartOf="@+id/civ_colorTag" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/civ_colorTag"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:elevation="1dp"
         android:src="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tv_childType"
+        android:id="@+id/tv_eventType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/popings_regular_400"
-        android:text="Start at: "
-        android:textSize="11sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_childTitle"
-        app:layout_constraintStart_toStartOf="@+id/tv_childTitle" />
+        android:text="Type"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_eventTitle"
+        app:layout_constraintStart_toStartOf="@+id/tv_eventTitle" />
 
     <TextView
-        android:id="@+id/tv_childTitle"
+        android:id="@+id/tv_eventTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/popings_medium_500"
         android:text="Title child"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@+id/circleImageView"
-        app:layout_constraintTop_toTopOf="@+id/circleImageView" />
+        app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
+        app:layout_constraintTop_toTopOf="@+id/civ_colorTag" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
