vista fragment_expenses.xml definitivo con graficos incluidos, vista fragment_all_movements.xml definitiva, vista fragment_passwords.xml definitiva. Modificado colores (gris dove)

--- a/app/src/main/res/layout/fragment_all_movements.xml
+++ b/app/src/main/res/layout/fragment_all_movements.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".passwords.PasswordsFragment">
+    tools:context=".expenses.AllMovementsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -40,12 +40,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materialCardView"
         tools:itemCount="5"
-        tools:listitem="@layout/cell_all_passwords_groups" />
+        tools:listitem="@layout/cell_day_all_movements" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/group"
+        android:text="@string/movement"
         android:textColor="@color/white"
         app:icon="@drawable/ic_add_24"
         android:backgroundTint="@color/primaryColor"
