--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:layout_height="250dp"
+    android:padding="10dp"
+    android:background="@color/white_magnolia"
     tools:context=".expenses.PieChartFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pie_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Pie Chart" />
+        android:layout_centerInParent="true"/>
 
-</FrameLayout>
+</RelativeLayout>
